[tool.poetry]
name = "armfind"
version = "1.0"
description = ""
authors = ["Merculous <24739823+Merculous@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pybinpatch = {git = "https://github.com/Merculous/PyBinPatch", rev = "update"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
